--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,18 @@
 eclipse.preferences.version=1
+encoding//app/__init__.py=utf-8
+encoding//app/admin/__init__.py=utf-8
+encoding//app/admin/conf/__init__.py=utf-8
 encoding//app/admin/controller/__init__.py=utf-8
 encoding//app/admin/model/__init__.py=utf-8
 encoding//app/admin/model/indexModel.py=utf-8
+encoding//app/common/__init__.py=utf-8
+encoding//app/common/conf/__init__.py=utf-8
+encoding//app/common/controller/__init__.py=utf-8
+encoding//app/common/model/__init__.py=utf-8
+encoding//app/common/model/indexModel.py=utf-8
+encoding//app/home/__init__.py=utf-8
+encoding//app/home/conf/__init__.py=utf-8
+encoding//app/home/controller/__init__.py=utf-8
+encoding//app/home/model/__init__.py=utf-8
+encoding//app/home/model/indexModel.py=utf-8
+encoding/Run.py=utf-8
